@@ -1,9 +1,12 @@
 dist_bin_SCRIPTS =
 dist_bin_SCRIPTS += ruckusrd
 
+dist_sysconf_DATA =
+dist_sysconf_DATA += ruckusrd.conf
+
 pkgdata_DATA =
 pkgdata_DATA += linuxrc
-pkgdata_DATA += ruckusrd.conf
+pkgdata_DATA += ruckusrd.sh
 pkgdata_DATA += initramfs.cpio.xz
 
 
@@ -11,6 +14,7 @@ install-exec-hook:
 	rm -f $(DESTDIR)$(bindir)/mkinitrd
 	(cd $(DESTDIR)$(bindir) && $(LN_S) ruckusrd mkinitrd)
 	sed -i 's|__LIBDIR__|$(pkgdatadir)|' $(DESTDIR)$(bindir)/ruckusrd
+	sed -i 's|__CONFDIR__|$(sysconfdir)|' $(DESTDIR)$(bindir)/ruckusrd
 
 uninstall-local:
 	rm -f $(DESTDIR)$(bindir)/mkinitrd
